static/css/main.ie.css
/* ... */
.event-meta strong,
.event-meta b {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
}

.lt-ie9 .event-meta strong,
.lt-ie9 .event-meta b {
  font-weight: normal !important;
}

.event-meta__medium {
  font-family: "AvenirNextLTW01-Medium",Arial,sans-serif;
  font-style: normal;
  font-weight: 500;
}

.lt-ie9 .event-meta__medium {
  font-weight: normal !important;
}

.event-meta_description {
  text-transform: none;
}

.event-meta_description__block {
  display: block;
}

.event-meta_address {
  text-transform: capitalize;
  display: inline-block;
}

.event-meta_datetime {
  letter-spacing: normal;
}

.event-meta_time:before {
  content: "\40";
  margin-right: .2em;
}

.event-status {
  color: #101820;
  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
  font-style: normal;
  font-weight: normal;
}

.event-status em,
.event-status i {
  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
  font-style: italic;
  font-weight: normal;
}

.lt-ie9 .event-status em,
.lt-ie9 .event-status i {
  font-style: normal !important;
}

.event-status strong,
.event-status b {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
}

.lt-ie9 .event-status strong,
.lt-ie9 .event-status b {
  font-weight: normal !important;
}

.event-status .event-meta {
  color: #babbbd;
  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
  font-style: normal;
  font-weight: normal;
}

.event-status .event-meta em,
.event-status .event-meta i {
  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
  font-style: italic;
  font-weight: normal;
}

.lt-ie9 .event-status .event-meta em,
.lt-ie9 .event-status .event-meta i {
  font-style: normal !important;
}

.event-status .event-meta strong,
.event-status .event-meta b {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
}

.lt-ie9 .event-status .event-meta strong,
.lt-ie9 .event-status .event-meta b {
  font-weight: normal !important;
}

.event-venue {
  background: #f1f2f2;
  border-top: 5px solid #2cb34a;
}

.event-venue .event-media_container {
  max-height: 400px;
  overflow: hidden;
}

.event-venue_header {
  padding: 1.5em 1.5em .5em;
  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
  font-style: normal;
  font-weight: normal;
}

.event-venue_header em,
.event-venue_header i {
  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
  font-style: italic;
  font-weight: normal;
}

.lt-ie9 .event-venue_header em,
.lt-ie9 .event-venue_header i {
  font-style: normal !important;
}

.event-venue_header strong,
.event-venue_header b {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
}

.lt-ie9 .event-venue_header strong,
.lt-ie9 .event-venue_header b {
  font-weight: normal !important;
}

.event-venue_header .event-calendar_container {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
  letter-spacing: 1px;
  margin-top: 0;
  margin-bottom: .35714286em;
  font-size: .875em;
  line-height: 1.57142857;
  text-transform: uppercase;
}

.lt-ie9 .event-venue_header .event-calendar_container {
  font-weight: normal !important;
}

.event-venue_header .event-calendar_download {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
  display: block;
  padding-top: .2em;
  text-decoration: none;
  text-transform: none;
}

.lt-ie9 .event-venue_header .event-calendar_download {
  font-weight: normal !important;
}

.event-venue_header .event-meta {
  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
  font-style: normal;
  font-weight: normal;
}

.event-venue_header .event-meta em,
.event-venue_header .event-meta i {
  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
  font-style: italic;
  font-weight: normal;
}

.lt-ie9 .event-venue_header .event-meta em,
.lt-ie9 .event-venue_header .event-meta i {
  font-style: normal !important;
}

.event-venue_header .event-meta strong,
.event-venue_header .event-meta b {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
}

.lt-ie9 .event-venue_header .event-meta strong,
.lt-ie9 .event-venue_header .event-meta b {
  font-weight: normal !important;
}

.event-venue_header .event-meta_venue {
  display: block;
}

.event-venue_heading {
  display: inline-block;
}

.event-footer {
  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
  font-style: normal;
  font-weight: normal;
}

.event-footer em,
.event-footer i {
  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
  font-style: italic;
  font-weight: normal;
}

.lt-ie9 .event-footer em,
.lt-ie9 .event-footer i {
  font-style: normal !important;
}

.event-footer strong,
.event-footer b {
  font-family: "AvenirNextLTW01-Demi",Arial,sans-serif;
  font-style: normal;
  font-weight: bold;
}

.lt-ie9 .event-footer strong,
.lt-ie9 .event-footer b {
  font-weight: normal !important;
}

.event-footer_banner {
  padding: 15px 20px;
  background-color: #f8f8f8;
}

.event-footer_banner {
  border-bottom: 1px solid #babbbd;
}

.event-footer_banner-message {
  display: inline-block;
  padding-right: 20px;
  margin-bottom: 10px;
}

.bureau-mission {
  margin-bottom: 2.8125em;
}

.bureau-mission_media .image-container {
  margin-left: 10px;
}

.bureau-mission_section {
  margin-top: 1.875em;
}

.bureau-mission_section+.bureau-mission_section {
  border-top: 1px solid #babbbd;
  padding-top: 1.875em;
}

.bureau-functions {
  border-top: 1px solid #babbbd;
}

.bureau-functions_list {
  font-family: "AvenirNextLTW01-Regular",Arial,sans-serif;
  font-style: normal;
  font-weight: normal;
}

.bureau-functions_list em,
.bureau-functions_list i {
  font-family: "AvenirNextLTW01-Italic",Arial,sans-serif;
  font-style: italic;
  font-weight: normal;
}
/* ... */

